--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 .location-form {
     left: 50%;
-    max-width: 522px;
+    max-width: 320px;
     position: absolute;
     top: 20%;
     transform: translateX(-50%);
@@ -29,7 +29,7 @@
     height: 100%;
     flex-direction: column;
     background-color:#FFF;
-    padding: 3rem 1.5rem;
+    padding: 3rem 0;
     position: relative;
 }
 .geolocation-link {
@@ -86,4 +86,12 @@
     font-size: 16px;
     font-weight: 600;
     border-radius: 5px;
+}
+@media(min-width:768px){
+    .background-form{
+        padding: 3rem 1.5rem;
+    }
+    .location-form {
+        max-width: 522px;
+    }
 }
