--- a/style.css
+++ b/style.css
@@ -58,13 +58,14 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    flex-direction: column;
 }
-.text-input {
+.text-input, #stateForm {
     margin: 0.5rem 0px;
     width: 100%;
     padding: 0.5rem 1.25rem;
     font-size: 0.875rem;
-    font-family: "Leroy Merlin Sans", sans-serif;
+    font-family: sans-serif;
     color: rgb(102, 102, 102);
     border: 0.0625rem solid rgb(238, 238, 240);
     outline: transparent;
@@ -72,6 +73,10 @@
     appearance: none;
     transition: all 300ms ease-in 0s;
     max-width: 250px;
+    text-align: center;
+}
+#stateForm {
+    max-width: 290px;
 }
 .btn-sucess {
     display: block;
