--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-#page-location {
+.page-location {
     position: absolute;
     width: 100vw;
     height: 100vh;
     z-index: 99999;
     font-family: "Open Sans", arial, sans-serif;
 }
-#page-location .location-form {
+.page-location .location-form {
     left: 50%;
     max-width: 320px;
     position: absolute;
@@ -13,19 +13,19 @@
     transform: translateX(-50%);
     width: 100%;
 }
-#page-location .location-wrapper {
+.page-location .location-wrapper {
     display: flex;
     width: 100%;
     height: 100%;
     position: fixed;
-    background: url('/i/background.png');
+    background: url('./img/background.png');
 }
-#page-location .overlay {
+.page-location .overlay {
     background-color: #0007;
     width: 100%;
     height: 100%;
 }
-#page-location .background-form {
+.page-location .background-form {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,7 +36,7 @@
     padding: 3rem 0;
     position: relative;
 }
-#page-location .geolocation-link {
+.page-location .geolocation-link {
     color: #e31837;
     cursor: pointer;
     display: block;
@@ -44,21 +44,21 @@
     font-weight: 600;
     margin: 16px 0px 24px;
 }
-#page-location .modal-title {
+.page-location .modal-title {
     font-size: 1.5rem;
     margin: 0;
     text-align: center;
     font-weight: bold;
     color: #333;
 }
-#page-location .modal-text {
+.page-location .modal-text {
     color: #2e2e2e;
     font-size: 16px;
     margin: 8px 0px 0px;
     padding: 0px 70px;
     text-align: center;
 }
-#page-location .region-select {
+.page-location .region-select {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -66,7 +66,7 @@
     text-align: center;
     flex-direction: column;
 }
-#page-location .text-input, #stateForm {
+.page-location .text-input, .state-form {
     margin: 0.5rem 0px;
     width: 100%;
     padding: 0.5rem 1.25rem;
@@ -82,7 +82,7 @@
     text-align: left;
     box-sizing: border-box;
 }
-#page-location .btn-sucess {
+.page-location .btn-sucess {
     display: block;
     float: none;
     margin: auto;
@@ -95,14 +95,14 @@
     font-weight: 600;
     border-radius: 20px;
 }
-#page-location .fas.fa-map-marker-alt {
+.page-location .fas.fa-map-marker-alt {
     color: #E31837;
 }
 @media(min-width:768px){
-    #page-location .background-form{
+    .page-location .background-form{
         padding: 3rem 1.5rem;
     }
-    #page-location .location-form {
+    .page-location .location-form {
         max-width: 522px;
     }
 }
